--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ cmake_minimum_required(VERSION 3.2)
 # project name
 project( rayTracer )
 
+set (CMAKE_CXX_STANDARD 11)
+
+
 # Package required to compilation
 find_package( OpenCV REQUIRED )
 
